refactor: adjust ui and config for android